--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
   "license": "ISC",
   "devDependencies": {
     "typescript": "^5.0.4",
-    "vite": "^4.3.9"
+    "vite": "^4.3.9",
+    "vite-plugin-glsl": "^1.1.2"
   },
   "dependencies": {
-    "@webgpu/types": "^0.1.32"
+    "@types/chroma-js": "^2.4.0",
+    "@webgpu/types": "^0.1.32",
+    "chroma-js": "^2.4.2"
   }
 }
