--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,6 @@
     "sourceMap": true,
     "typeRoots": [ "./node_modules/@webgpu/types", "./node_modules/@types"]
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*", "index.ts"],
   "exclude": ["**/*.spec.ts"]
 }
