--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
   "description": "A simple WebGPU exercise",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "build": "tsc && vite build",
     "start": "vite"
   },
   "author": "Sébastien Guimmara",
   "license": "ISC",
   "devDependencies": {
+    "@types/jest": "^29.5.1",
+    "jest": "^29.5.0",
+    "ts-jest": "^29.1.0",
     "typescript": "^5.0.4",
     "vite": "^4.3.9",
     "vite-plugin-glsl": "^1.1.2"
