--- a/package.json
+++ b/package.json
@@ -21,7 +21,11 @@
   "dependencies": {
     "@types/chroma-js": "^2.4.0",
     "@webgpu/types": "^0.1.32",
-    "chroma-js": "^2.4.2"
+    "chroma-js": "^2.4.2",
+    "gl-matrix": "^4.0.0-beta.1",
+    "npm": "^9.6.7"
   },
-  "files": ["dist/**"]
+  "files": [
+    "dist/**"
+  ]
 }
