basic loaders (PLY, OBJ)

--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "vite-plugin-glsl": "^1.1.2"
   },
   "dependencies": {
+    "@loaders.gl/core": "^3.4.4",
+    "@loaders.gl/obj": "^3.4.4",
+    "@loaders.gl/ply": "^3.4.4",
     "@types/chroma-js": "^2.4.0",
     "@webgpu/types": "^0.1.32",
     "chroma-js": "^2.4.2",
