--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "A simple WebGPU exercise",
   "main": "index.js",
   "scripts": {
-    "test": "jest",
+    "test": "NODE_OPTIONS=--experimental-vm-modules jest",
     "build": "tsc",
     "start": "vite"
   },
@@ -15,13 +15,12 @@
     "@types/jest": "^29.5.1",
     "jest": "^29.5.0",
     "ts-jest": "^29.1.0",
-    "typescript": "^5.0.4",
+    "typescript": "^5.1.3",
     "vite": "^4.3.9",
     "vite-plugin-glsl": "^1.1.2"
   },
   "dependencies": {
     "@loaders.gl/core": "^3.4.4",
-    "@loaders.gl/obj": "^3.4.4",
     "@loaders.gl/ply": "^3.4.4",
     "@types/chroma-js": "^2.4.0",
     "@webgpu/types": "^0.1.32",
