--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,8 @@
     "lib": ["ES2020", "DOM"],
     "target": "ES2017",
     "module": "ES2020",
-    "moduleResolution": "bundler",
+    "moduleResolution": "node",
+    "noEmit": true,
     "esModuleInterop": true,
     "noImplicitAny": true,
     "removeComments": true,
