--- a/package.json
+++ b/package.json
@@ -13,16 +13,17 @@
   "author": "Sébastien Guimmara",
   "license": "ISC",
   "devDependencies": {
-    "@types/jest": "^29.5.1",
+    "@loaders.gl/core": "^3.4.4",
+    "@loaders.gl/ply": "^3.4.4",
     "@types/chroma-js": "^2.4.0",
+    "@types/jest": "^29.5.1",
     "@webgpu/types": "^0.1.32",
+    "apache-arrow": "^12.0.0",
     "jest": "^29.5.0",
     "ts-jest": "^29.1.0",
     "typescript": "^5.1.3",
     "vite": "^4.3.9",
-    "vite-plugin-glsl": "^1.1.2",
-    "@loaders.gl/core": "^3.4.4",
-    "@loaders.gl/ply": "^3.4.4"
+    "vite-plugin-glsl": "^1.1.2"
   },
   "dependencies": {
     "chroma-js": "^2.4.2",
