--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "description": "A 3D renderer written in TypeScript and WebGPU.",
   "main": "index.js",
   "scripts": {
-    "test": "NODE_OPTIONS=--experimental-vm-modules jest",
+    "test": "vitest",
+    "coverage": "vitest run --coverage",
     "lint": "tsc --noEmit",
     "build": "tsc",
     "start": "vite"
@@ -17,13 +18,15 @@
     "@loaders.gl/ply": "^3.4.4",
     "@types/chroma-js": "^2.4.0",
     "@types/jest": "^29.5.1",
+    "@vitest/coverage-v8": "^0.32.0",
     "@webgpu/types": "^0.1.32",
     "apache-arrow": "^12.0.0",
-    "jest": "^29.5.0",
-    "ts-jest": "^29.1.0",
+    "ts-node": "^10.9.1",
     "typescript": "^5.1.3",
     "vite": "^4.3.9",
-    "vite-plugin-glsl": "^1.1.2"
+    "vite-plugin-glsl": "^1.1.2",
+    "vite-tsconfig-paths": "^4.2.0",
+    "vitest": "^0.32.0"
   },
   "dependencies": {
     "chroma-js": "^2.4.2",
