--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
     "module": "ES2022",
     "moduleResolution": "node",
     "noEmit": false,
+    "declaration": true,
     "resolveJsonModule": true,
     "esModuleInterop": true,
     "noImplicitAny": true,
