--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "vite": "^4.3.9",
     "vite-plugin-glsl": "^1.1.2",
     "vite-tsconfig-paths": "^4.2.0",
-    "vitest": "^0.32.0"
+    "vitest": "^0.32.0",
+    "vitest-mock-extended": "^1.1.3"
   },
   "dependencies": {
     "chroma-js": "^2.4.2",
