--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "coverage": "vitest run --coverage",
     "lint": "tsc --noEmit",
     "build": "tsc",
+    "doc": "typedoc src/index.ts",
     "start": "vite"
   },
   "author": "Sébastien Guimmara",
@@ -22,6 +23,7 @@
     "@webgpu/types": "^0.1.32",
     "apache-arrow": "^12.0.0",
     "ts-node": "^10.9.1",
+    "typedoc": "^0.24.8",
     "typescript": "^5.1.3",
     "vite": "^4.3.9",
     "vite-plugin-glsl": "^1.1.2",
