--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "lint": "tsc --noEmit",
     "build": "tsc",
     "doc": "typedoc src/index.ts",
-    "start": "vite"
+    "start": "vite",
+    "prepublish": "shx rm -fr dist/ && shx mkdir dist && node scripts/prepare-package.mjs",
+    "prepack": "npm run build"
   },
   "author": "Sébastien Guimmara",
   "license": "MIT",
@@ -22,9 +24,14 @@
     "@vitest/coverage-v8": "^0.32.0",
     "@webgpu/types": "^0.1.32",
     "apache-arrow": "^12.0.0",
+    "es-main": "^1.2.0",
+    "fs-extra": "^11.1.1",
+    "path": "^0.12.7",
+    "shx": "^0.3.4",
     "ts-node": "^10.9.1",
     "typedoc": "^0.24.8",
     "typescript": "^5.1.3",
+    "url": "^0.11.0",
     "vite": "^4.3.9",
     "vite-plugin-glsl": "^1.1.2",
     "vite-tsconfig-paths": "^4.2.0",
@@ -34,8 +41,5 @@
   "dependencies": {
     "chroma-js": "^2.4.2",
     "wgpu-matrix": "^2.4.0"
-  },
-  "files": [
-    "dist/**"
-  ]
+  }
 }
