--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,9 @@
     "paths": {
       "@/*": ["./*"]
     },
+    "plugins": [
+      { "transform": "typescript-transform-paths" }
+    ],
     "typeRoots": [ "./node_modules/@webgpu/types", "./node_modules/@types"]
   },
   "include": ["src/**/*", "index.ts"],
