tsconfig.json: skipLibCheck = true

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
     "target": "ES2022",
     "module": "ES2022",
     "moduleResolution": "node",
+    "skipLibCheck": true,
     "noEmit": false,
     "declaration": true,
     "resolveJsonModule": true,
