--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "@loaders.gl/core": "^3.4.4",
     "@loaders.gl/ply": "^3.4.4",
+    "@tweakpane/core": "^1.1.9",
     "@types/chroma-js": "^2.4.0",
     "@types/jest": "^29.5.1",
     "@vitest/coverage-v8": "^0.32.0",
@@ -28,6 +29,7 @@
     "path": "^0.12.7",
     "shx": "^0.3.4",
     "ts-node": "^10.9.1",
+    "tweakpane": "^3.1.10",
     "typedoc": "^0.24.8",
     "typescript": "^4.9.5",
     "url": "^0.11.0",
