--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "devDependencies": {
     "@loaders.gl/core": "^3.4.4",
+    "@loaders.gl/gltf": "^3.4.4",
     "@loaders.gl/ply": "^3.4.4",
     "@tweakpane/core": "^1.1.9",
     "@types/chroma-js": "^2.4.0",
