--- a/package.json
+++ b/package.json
@@ -37,12 +37,12 @@
     "vite-plugin-glsl": "^1.1.2",
     "vite-tsconfig-paths": "^4.2.0",
     "vitest": "^0.32.0",
-    "vitest-mock-extended": "^1.1.3"
+    "vitest-mock-extended": "^1.1.3",
+    "ttypescript": "^1.5.15",
+    "typescript-transform-paths": "^3.4.6"
   },
   "dependencies": {
     "chroma-js": "^2.4.2",
-    "ttypescript": "^1.5.15",
-    "typescript-transform-paths": "^3.4.6",
     "wgpu-matrix": "^2.4.0"
   }
 }
