--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -74,16 +74,16 @@ jobs:
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v1
 
-  pages:
+  docs:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+
     runs-on: ubuntu-latest
 
     strategy:
       matrix:
         node-version: [18.x]
-
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
 
     steps:
     - name: Checkout repository
@@ -101,6 +101,14 @@ jobs:
 
     - name: Run doc
       run: npm run doc
+
+    - name: Setup Pages
+      uses: actions/configure-pages@v3
+    - name: Upload artifact
+      uses: actions/upload-pages-artifact@v2
+      with:
+        # Upload entire repository
+        path: 'docs'
 
     - name: Deploy to GitHub Pages
       id: deployment
