--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -75,6 +75,10 @@ jobs:
       uses: codecov/codecov-action@v1
 
   docs:
+    permissions:
+      contents: read
+      pages: write
+      id-token: write
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
