package.json: fix output folder

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "build": "ttsc",
     "doc": "typedoc --readme none --name Hammerhead.gl src/index.ts",
     "start": "vite",
-    "prepack": "shx rm -fr dist/ && shx mkdir dist && npx copyfiles -u 1 './src/**/*.wgsl' dist && npm run build",
+    "prepack": "shx rm -fr dist/ && shx mkdir dist && npx copyfiles -u 1 './src/**/*.wgsl' dist && node scripts/prepare-package.mjs && npm run build",
     "prepare": "husky install"
   },
   "devDependencies": {
