pages: default vue app

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -112,7 +112,7 @@ jobs:
       uses: actions/upload-pages-artifact@v2
       with:
         # Upload entire repository
-        path: 'docs'
+        path: 'pages/dist'
 
     - name: Deploy to GitHub Pages
       id: deployment
