--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "doc": "typedoc --readme none --name Hammerhead.gl src/index.ts",
     "start": "vite",
     "prepack": "shx rm -fr dist/ && shx mkdir dist && npx copyfiles -u 1 './src/**/*.wgsl' dist && node scripts/prepare-package.mjs && npm run build",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "dev": "cd pages && npm run dev",
+    "pages": "cd pages && npm run build"
   },
   "devDependencies": {
     "@loaders.gl/core": "^3.4.4",
