pages: fix config

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -74,7 +74,7 @@ jobs:
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v1
 
-  docs:
+  pages:
     permissions:
       contents: read
       pages: write
@@ -103,7 +103,7 @@ jobs:
     - name: Install dependencies
       run: npm install
 
-    - name: Run doc
+    - name: Run pages
       run: npm run pages
 
     - name: Setup Pages
