--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -104,7 +104,7 @@ jobs:
       run: npm install
 
     - name: Run pages
-      run: npm run pages -- "--base ${{ steps.deployment.outputs.page_url }}"
+      run: npm run pages -- "--base hammerhead.gl"
 
     - name: Setup Pages
       uses: actions/configure-pages@v3
