--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -105,8 +105,7 @@ jobs:
 
     - name: Run pages
       run: |
-        echo ${{ steps.deployment.outputs.page_url }}
-        echo ${{ page_url }}
+        # npm run pages -- "--base $url"
 
     - name: Setup Pages
       uses: actions/configure-pages@v3
