--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -105,7 +105,7 @@ jobs:
 
     - name: Run pages
       run: |
-        # npm run pages -- "--base $url"
+        # npm run pages -- --base $url
 
     - name: Setup Pages
       uses: actions/configure-pages@v3
