--- a/pages/package.json
+++ b/pages/package.json
@@ -7,7 +7,7 @@
     "build": "run-p type-check build-only",
     "preview": "vite preview",
     "build-only": "vite build",
-    "pages": "vite build --base https://sguimmara.github.io/hammerhead.gl",
+    "pages": "vite build --base /hammerhead.gl",
     "type-check": "vue-tsc --noEmit -p tsconfig.app.json --composite false",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
     "format": "prettier --write src/"
