--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "type": "module",
   "description": "A 3D renderer written in TypeScript and WebGPU.",
   "main": "index.js",
+  "imports": {
+    "@/*": "./*"
+  },
   "scripts": {
     "precommit": "npm run lint && npm test",
     "test": "vitest run",
@@ -55,9 +58,6 @@
     "vitest-mock-extended": "^1.1.3"
   },
   "dependencies": {
-    "@popperjs/core": "^2.11.8",
-    "bootstrap": "^5.3.1",
-    "bootstrap-icons": "^1.10.5",
     "chroma-js": "^2.4.2",
     "wgpu-matrix": "^2.4.0"
   }
