--- a/pages/package.json
+++ b/pages/package.json
@@ -13,6 +13,8 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "bootstrap": "^5.3.1",
+    "bootstrap-icons": "^1.10.5",
     "hammerhead.gl": "file:../dist/",
     "pinia": "^2.1.6",
     "vue": "^3.3.4",
