--- a/examples/tsconfig.json
+++ b/examples/tsconfig.json
@@ -3,7 +3,7 @@
     "compilerOptions": {
       "paths": {
         "hammerhead.gl/*": ["../dist/*"],
-        "@/*": ["../dist/*"],
+        "@*": ["../dist/*"],
       },
     },
     "include": ["**/*"],
