adapt github workflow

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -113,7 +113,7 @@ jobs:
       uses: actions/upload-pages-artifact@v2
       with:
         # Upload entire repository
-        path: 'pages/dist'
+        path: 'examples/dist'
 
     - name: Deploy to GitHub Pages
       id: deployment
