package.json: copy shaders before starting examples

--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
     "build": "ttsc",
     "watch": "npm run prepack && ttsc --watch",
     "doc": "typedoc --readme none --name Hammerhead.gl src/index.ts",
-    "start": "vite examples",
-    "prepack": "shx rm -fr dist/ && shx mkdir dist && npx copyfiles -u 1 './src/**/*.wgsl' dist && node scripts/prepare-package.mjs && npm run build",
+    "copy-shaders": "npx copyfiles -u 1 './src/**/*.wgsl' dist",
+    "start": "npm run copy-shaders && vite examples",
+    "prepack": "shx rm -fr dist/ && shx mkdir dist && npm run copy-shaders && node scripts/prepare-package.mjs && npm run build",
     "prepare": "husky install",
     "pages": "npm run prepack && cd examples && npx vite build --base=/hammerhead.gl/",
     "prepare-examples": "node scripts/generate-example-index.mjs"
